--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <li><a href="registro.html">Ir a registro a boletin de noticias</a></li>
-            <li><a href="#">Ir a...</a></li>
+            <li><a href="lenguajes.html">Ir a informaciòn</a></li>
             <li><a href="#">Ir a...</a></li>
             <li><a href="#">Ir a...</a></li>
         </ul>
