--- a/registro.html
+++ b/registro.html
@@ -26,5 +26,6 @@
                 <button type="submit">Resetear formulario</button>
         </fieldset>
     </form>
+    <a href="index.html">Regresar al menù principal</a>
 </body>
 </html>
