--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="registro.html">Ir a registro a boletin de noticias</a></li>
             <li><a href="lenguajes.html">Ir a informaciòn</a></li>
-            <li><a href="#">Ir a...</a></li>
+            <li><a href="validaciòn.html">Ir a validaciòn de datos</a></li>
             <li><a href="#">Ir a...</a></li>
         </ul>
     </nav>
